made changes ./assets/filename

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <div class="col-lg-6 col-sm-12 col-md-12">
             <div class="photoDiv">
                <img class="myprofile"
-                  src="C:\Users\Lenovo\Downloads\Screenshot_20231130_184913_Photos-removebg-preview.png"
+                  src="./assets/Screenshot_20231130_184913_Photos-removebg-preview.png"
                   alt="profileImg">
             </div>
          </div>
@@ -122,7 +122,7 @@
             <h1 class="helpText">How Can I Help You?</h1>
             <div class="midPhotoDiv">
             <img class="servicesPic"
-               src="C:\Users\Lenovo\Downloads\20240522_151920__1_-removebg-preview.png">
+               src="./assets/20240522_151920__1_-removebg-preview.png">
          </div>
             </div>
 
