--- a/index.html
+++ b/index.html
@@ -59,24 +59,20 @@
                      style="color:chartreuse">developer/designer</span> , but a partner
                   in your journey towards digital excellence, I'd love to connect
                </p>
-
             </div>
             <div class="buttonsDiv">
                <button class="btn btn-lg btnContact" id="contactForm" onclick="runForm()" >Contact me</button>
                <button class="btn  btn-lg btnProject ">Show Work</button>
             </div>
-
          </div>
       </div>
-
-
    </div>
 
    <div class="projects">
       <div class="row">
          <div class="col-lg-4 col-md-6">
             <div class="card  projectCard" style="width: 18rem;">
-               <img src="..." class="card-img-top" alt="...">
+               <!-- <i class="bi bi-thermometer-sun"></i> -->
                <div class="card-body">
                   <h5 class="card-title">Temperature Converter</h5>
                   <p class="card-text">Designed and created a fully dynamic Temperature Converter </p>
@@ -88,7 +84,7 @@
          </div>
          <div class="col-lg-4 col-md-6">
             <div class="card projectCard" style="width: 18rem;">
-               <img src="..." class="card-img-top" alt="...">
+               <!-- <img src="..." class="card-img-top" alt="..."> -->
                <div class="card-body">
                   <h5 class="card-title">Landing Page</h5>
                   <p class="card-text">Landing Page with best functionalities for a business</p>
@@ -101,11 +97,11 @@
 
          <div class="col-lg-4 col-md-6">
             <div class="card projectCard" style="width: 18rem;">
-               <img src="..." class="card-img-top" alt="...">
+               <!-- <img src="..." class="card-img-top" alt="..."> -->
                <div class="card-body">
                   <h5 class="card-title">Personal Portfolio</h5>
                   <p class="card-text">My personal portfolio , lets connect and build</p>
-                  <a href="#" class="btn btn-primary pLink">
+                  <a href="https://anisshaikh2425.github.io/portFinal/" class="btn btn-primary pLink">
                      <i class="bi bi-box-arrow-up-right"></i>
                      Project link
                   </a>
