--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                <div class="card-body">
                   <h5 class="card-title">Landing Page</h5>
                   <p class="card-text">Landing Page with best functionalities for a business</p>
-                  <a href="#" class="btn btn-primary pLink ">
+                  <a href="https://anisshaikh2425.github.io/Oasis-internship/" class="btn btn-primary pLink ">
                      <i class="bi bi-box-arrow-up-right"></i>
                      Project Link</a>
                </div>
